fix(styles): Use right aligned ltr for non-placeholder url input (#3550)

--- a/system-addon/content-src/components/TopSites/_TopSites.scss
+++ b/system-addon/content-src/components/TopSites/_TopSites.scss
@@ -323,6 +323,11 @@
       position: relative;
     }
 
+    .url input:not(:placeholder-shown):dir(rtl) {
+      direction: ltr;
+      text-align: right;
+    }
+
     .section-title {
       margin-bottom: 5px;
       margin-inline-start: 205px;
